k8s-deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: case-service
spec:
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
