k8s-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: case-ingress
  annotations:    
    nginx.ingress.kubernetes.io/app-root: /hello
spec:
  ingressClassName: case-example
  rules:
  - host: www.hakankocagoz.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: case-service
            port:
              number: 80
